# bucketinator-rs

./: Cargo.toml  README.md  diesel.toml
.devcontainer/: devcontainer.json
demo/: bucketinator.toml  rustodos.toml  todos.db3  todos.json
migrations/2023-12-02-185123_create_todos/: down.sql  up.sql
src/: app.rs  config.rs  lib.rs  main.rs  todo.rs
src/cli/: cmd_add.rs  cmd_list.rs  cmd_rm.rs  mod.rs
src/model/: db.rs  todo.rs
src/model/db/: json_database.rs  mod.rs  schema.rs  sqlite_database.rs  todo_database.rs  todo_repository.rs
src/tui/: mod.rs  tui_main.rs
