[package]
name = "bucketinator-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
config = "0.13.4"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
